@startuml
    class User {
        + id: int
        + name: string
        + email: string
    }

    class Product {
        + id: int
        + name: string
        + sku: string
        + price: float
    }

    class OrderItem {
        + id: int
        + order_id: int
        + product_id: int
        + quantity: int
        + unit_price: float
    }

    class Order {
        + id: int
        + user_id: int
        + total_amount: float
    }

    OrderItem <-- Order
    User --> Order
    Product --> OrderItem

    
@enduml
